[gd_scene load_steps=9 format=3 uid="uid://caup4tky6b8g7"]

[ext_resource type="Script" path="res://Scenes/spell_ui.gd" id="1_5txb0"]
[ext_resource type="PackedScene" uid="uid://baeaj55y6xd38" path="res://Scenes/UI/BlankButton.tscn" id="2_a30l4"]
[ext_resource type="FontFile" uid="uid://bg5wgh22jq31n" path="res://Assets/Fonts/MouldyCheeseRegular-WyMWG.ttf" id="3_nq4v7"]

[sub_resource type="Animation" id="Animation_tif6q"]
resource_name = "Transition_In"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Control:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-1927, 0), Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_7k4x1"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Control:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_lhneh"]
resource_name = "Transition_Out"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Control:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(-1927, 0)]
}

[sub_resource type="Animation" id="Animation_pyfat"]
resource_name = "Start"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Control:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-1927, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_qno8i"]
_data = {
"RESET": SubResource("Animation_7k4x1"),
"Start": SubResource("Animation_pyfat"),
"Transition_In": SubResource("Animation_tif6q"),
"Transition_Out": SubResource("Animation_lhneh")
}

[node name="SpellUi" type="CanvasLayer" node_paths=PackedStringArray("text0", "text1", "text2", "text3", "text4", "text5", "text6", "text7")]
script = ExtResource("1_5txb0")
text0 = NodePath("Control/Panel/MarginContainer/HBoxContainer/Text0")
text1 = NodePath("Control/Panel/MarginContainer/HBoxContainer/Text1")
text2 = NodePath("Control/Panel/MarginContainer/HBoxContainer/Text2")
text3 = NodePath("Control/Panel/MarginContainer/HBoxContainer/Text3")
text4 = NodePath("Control/Panel/MarginContainer/HBoxContainer/Text4")
text5 = NodePath("Control/Panel/MarginContainer/HBoxContainer/Text5")
text6 = NodePath("Control/Panel/MarginContainer/HBoxContainer/Text6")
text7 = NodePath("Control/Panel/MarginContainer/HBoxContainer/Text7")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -1927.0
offset_right = -1927.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -500.0
offset_top = -400.0
offset_right = 500.0
offset_bottom = 400.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4

[node name="MarginContainer" type="MarginContainer" parent="Control/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="HBoxContainer" type="VBoxContainer" parent="Control/Panel/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 24

[node name="Name" type="Label" parent="Control/Panel/MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_nq4v7")
theme_override_font_sizes/font_size = 44
text = "Spells:
"

[node name="Text0" type="Label" parent="Control/Panel/MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_nq4v7")
theme_override_font_sizes/font_size = 30
text = "test
"

[node name="Text1" type="Label" parent="Control/Panel/MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_nq4v7")
theme_override_font_sizes/font_size = 30
text = "test
"

[node name="Text2" type="Label" parent="Control/Panel/MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_nq4v7")
theme_override_font_sizes/font_size = 30
text = "test
"

[node name="Text3" type="Label" parent="Control/Panel/MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_nq4v7")
theme_override_font_sizes/font_size = 30
text = "test
"

[node name="Text4" type="Label" parent="Control/Panel/MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_nq4v7")
theme_override_font_sizes/font_size = 30
text = "test
"

[node name="Text5" type="Label" parent="Control/Panel/MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_nq4v7")
theme_override_font_sizes/font_size = 30
text = "test
"

[node name="Text6" type="Label" parent="Control/Panel/MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_nq4v7")
theme_override_font_sizes/font_size = 30
text = "test
"

[node name="Text7" type="Label" parent="Control/Panel/MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_nq4v7")
theme_override_font_sizes/font_size = 30
text = "test
"

[node name="CloseButton" parent="Control/Panel" instance=ExtResource("2_a30l4")]
offset_left = 1217.0
offset_top = 818.0
offset_right = 1389.0
offset_bottom = 886.0
text = "Close"

[node name="OpenButton" parent="." instance=ExtResource("2_a30l4")]
offset_left = 37.0
offset_top = 115.0
offset_right = 209.0
offset_bottom = 183.0
text = "Spells"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_qno8i")
}
speed_scale = 3.48

[connection signal="pressed" from="Control/Panel/CloseButton" to="." method="_on_close_button_pressed"]
[connection signal="pressed" from="OpenButton" to="." method="_on_open_button_pressed"]
